--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -2,7 +2,7 @@
 
 /* Warna pink soft yang konsisten */
 :root {
-    --soft-pink-bg: #fdf5f6;
+    --soft-pink-bg: #f7c4c9;
     --light-pink: #f8c8d0;
     --medium-pink: #f19eb0;
     --dark-pink: #e96d85;
