--- a/static/css/otp.css
+++ b/static/css/otp.css
@@ -2,7 +2,7 @@
 
 /* Warna pink soft yang digunakan */
 :root {
-    --soft-pink-bg: #fdf5f6;      
+    --soft-pink-bg: #f7c4c9;      
     --light-pink: #f8c8d0;       
     --medium-pink: #f19eb0;      
     --dark-pink: #e96d85;        
